--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     .name {
       font-size: 4rem;
       font-weight: bold;
-      color: #b91c1c; /* Vermelho */
+      color: #b91c1c;
     }
 
     .subtitle {
       font-size: 1.25rem;
-      color: #4b5563; /* Cinza escuro */
+      color: #4b5563;
     }
 
     .btn-continuar {
@@ -123,7 +123,6 @@
           tenho experiência em Java, HTML, CSS, MySQL e outras tecnologias. Gosto de transformar ideias em soluções práticas e funcionais.
           Estou em busca da minha primeira oportunidade profissional na área de tecnologia para aplicar meus conhecimentos e crescer como desenvolvedor.
         </p>
-        </p>
         <p class="mt-4 text-lg leading-relaxed">
           Tenho inglês no nível intermediário, o que me ajuda a compreender documentação técnica e comunicar-me em ambientes internacionais.
         </p>
@@ -152,8 +151,8 @@
           <div class="bg-white p-6 rounded-lg shadow card-hover">
             <h3 class="text-xl font-semibold mb-2">RHControl – Sistema de Gestão de RH</h3>
             <p class="mb-4">Sistema completo para cadastro, listagem, reajuste e exclusão de funcionários, com interface web moderna.</p>
-            <a href="https://mateus-scherer.github.io/Gerstor-de-RH-/" class="text-red-600 hover:underline" target="_blank" rel="noopener noreferrer">Abrir no navegador</a> |
-            <a href="https://github.com/Mateus-Scherer/Gerstor-de-RH-" class="text-red-600 hover:underline" target="_blank" rel="noopener noreferrer">Ver no GitHub</a>
+            <a href="https://mateus-scherer.github.io/Gestor-de-RH-/" class="text-red-600 hover:underline" target="_blank" rel="noopener noreferrer">Abrir no navegador</a> |
+            <a href="https://github.com/Mateus-Scherer?tab=repositories" class="text-red-600 hover:underline" target="_blank" rel="noopener noreferrer">Ver no GitHub</a>
           </div>
         </div>
       </section>
@@ -163,7 +162,7 @@
         <h2 class="text-3xl font-bold mb-6 text-red-700">Contato</h2>
         <ul class="space-y-2 text-lg">
           <li><strong>Email:</strong> <a href="mailto:mateusschererteles2020@gmail.com" class="text-red-600 hover:underline">mateusschererteles2020@gmail.com</a></li>
-          <li><strong>GitHub:</strong> <a href="https://github.com/mateus87634433" target="_blank" class="text-red-600 hover:underline" rel="noopener noreferrer">github.com/mateus87634433</a></li>
+          <li><strong>GitHub:</strong> <a href="https://github.com/Mateus-Scherer?tab=repositories" target="_blank" class="text-red-600 hover:underline" rel="noopener noreferrer">github.com/Mateus-Scherer</a></li>
           <li><strong>Telefone:</strong> (51) 93300-2830</li>
           <li><strong>Cidade:</strong> São Leopoldo - RS</li>
         </ul>
